- Added part of Russian documentation - Added class Bullet to Parameters namespace - Fixed Elysium notifications style - Fixed bug #1093 - Updated console build system - Updated NuGet specs - Uploaded new version of binaries
NOTE: You need to install MSBuild Extension Pack to build Elysium via console

--- a/Source code/Elysium.Test/MainWindow.xaml
+++ b/Source code/Elysium.Test/MainWindow.xaml
@@ -8,7 +8,7 @@
               params:Design.ContrastBrush="White"
               Background="{DynamicResource BackgroundBrush}"
               WindowStartupLocation="CenterScreen"
-              SizeToContent="WidthAndHeight">
+              Width="1024" Height="640">
     <metro:Window.ApplicationBar>
         <metro:ApplicationBar>
             <metro:DropDownCommandButton Header="Theme type"
