--- a/Source code/SDK/MSI/ItemTemplates/Visual Studio 2012/CSharp/1049/ElysiumWindow.tt
+++ b/Source code/SDK/MSI/ItemTemplates/Visual Studio 2012/CSharp/1049/ElysiumWindow.tt
@@ -13,7 +13,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <VSTemplate Version="3.0.0" Type="Item" xmlns="http://schemas.microsoft.com/developer/vstemplate/2005" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://schemas.microsoft.com/developer/vstemplate/2005">
   <TemplateData>
-    <Name>Metro Window</Name>
+    <Name>Окно в стиле Metro (WPF)</Name>
     <Description>Окно приложения Windows Presentation Foundation в стиле Metro</Description>
     <Icon Package="{b3bae735-386c-4030-8329-ef48eeda4036}" ID="4593" />
     <TemplateID>Elysium.CSharp.Window</TemplateID>
