--- a/Source code/SDK/MSI/ItemTemplates/Visual Studio 2012/CSharp/1049/Window.xaml
+++ b/Source code/SDK/MSI/ItemTemplates/Visual Studio 2012/CSharp/1049/Window.xaml
@@ -1,14 +1,11 @@
 ﻿<metro:Window x:Class="$rootnamespace$.$safeitemname$"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-              xmlns:metro="http://schemas.codeplex.com/elysium/theme"
-              xmlns:params="http://schemas.codeplex.com/elysium/theme/params"
-              xmlns:design="http://schemas.codeplex.com/elysium/theme/design"
-              mc:Ignorable="design"
-              design:ThemeManager.Theme="Dark"
-              design:ThemeManager.AccentBrush="{x:Static metro:AccentBrushes.Blue}"
-              design:ThemeManager.ContrastBrush="White"
+              xmlns:metro="http://schemas.codeplex.com/elysium"
+              xmlns:params="http://schemas.codeplex.com/elysium/params"
+              params:Design.Theme="Dark"
+              params:Design.AccentBrush="{x:Static metro:AccentBrushes.Blue}"
+              params:Design.ContrastBrush="White"
               Title="$safeitemname$" Height="300" Width="300">
     <Grid>
         
