--- a/Source code/Elysium/Themes/Windows/Window.xaml
+++ b/Source code/Elysium/Themes/Windows/Window.xaml
@@ -8,7 +8,7 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
         <ResourceDictionary Source="/Elysium;component/Themes/Ranges/ProgressBar.xaml"/>
-        <ResourceDictionary Source="/Elysium;component/Themes/Buttons/CommandButton.xaml"/>
+        <ResourceDictionary Source="/Elysium;component/Themes/Buttons/Button.xaml"/>
         <ResourceDictionary Source="/Elysium;component/Themes/Icons.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
@@ -62,7 +62,7 @@
                                 <controls:ProgressBar x:Name="PART_ProgressBar"
                                                       Grid.ColumnSpan="3"
                                                       Grid.Row="0"
-                                                      Background="{StaticResource TransparentBrush}"
+                                                      Background="{DynamicResource TransparentBrush}"
                                                       Value="{TemplateBinding Progress}"
                                                       VerticalAlignment="Top"
                                                       Height="2"/>
@@ -86,47 +86,70 @@
                                         <ColumnDefinition Width="Auto"/>
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
-                                    <controls:CommandButton x:Name="PART_Minimize"
-                                                            Grid.Column="0"
-                                                            BorderThickness="0"
-                                                            Command="{x:Static controls:WindowCommands.Minimize}"
-                                                            Width="34" Height="26">
+                                    <Grid.Resources>
+                                        <Style x:Key="{x:Type Button}" TargetType="{x:Type Button}"  BasedOn="{StaticResource {x:Type Button}}">
+                                            <Setter Property="Background" Value="{DynamicResource TransparentBrush}"/>
+                                            <Setter Property="BorderBrush" Value="{DynamicResource TransparentBrush}"/>
+                                            <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
+                                            <Style.Triggers>
+                                                <Trigger Property="IsMouseOver" Value="True">
+                                                    <Setter Property="Background" Value="{DynamicResource HighlightBrush}"/>
+                                                    <Setter Property="BorderBrush" Value="{DynamicResource HighlightBrush}"/>
+                                                    <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
+                                                </Trigger>
+                                                <Trigger Property="IsPressed" Value="True">
+                                                    <Setter Property="Background" Value="{DynamicResource AccentBrush}"/>
+                                                    <Setter Property="BorderBrush" Value="{DynamicResource AccentBrush}"/>
+                                                    <Setter Property="Foreground" Value="{DynamicResource ContrastBrush}"/>
+                                                </Trigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Grid.Resources>
+                                    <Button x:Name="PART_Minimize"
+                                            Grid.Column="0"
+                                            BorderThickness="0"
+                                            Command="{x:Static controls:WindowCommands.Minimize}"
+                                            Width="34" Height="26"
+                                            MinWidth="34">
                                         <Path Data="{StaticResource MinimizeIcon}"
-                                              Fill="{Binding RelativeSource={RelativeSource AncestorType={x:Type controls:CommandButton}}, Path=(params:CommandButtons.Mask)}"
+                                              Fill="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
                                               Width="10" Height="10"/>
-                                    </controls:CommandButton>
-                                    <controls:CommandButton x:Name="PART_Maximize"
-                                                            Grid.Column="1"
-                                                            BorderThickness="0"
-                                                            Command="{x:Static controls:WindowCommands.Maximize}"
-                                                            Width="34" Height="26">
+                                    </Button>
+                                    <Button x:Name="PART_Maximize"
+                                            Grid.Column="1"
+                                            BorderThickness="0"
+                                            Command="{x:Static controls:WindowCommands.Maximize}"
+                                            Width="34" Height="26"
+                                            MinWidth="34">
                                         <Path Data="{StaticResource MaximizeIcon}"
-                                              Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type controls:CommandButton}}, Path=(params:CommandButtons.Mask)}"
+                                              Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
                                               Width="10" Height="10"/>
-                                    </controls:CommandButton>
-                                    <controls:CommandButton x:Name="PART_Restore"
-                                                            Grid.Column="1"
-                                                            BorderThickness="0"
-                                                            Command="{x:Static controls:WindowCommands.Restore}"
-                                                            Width="34" Height="26"
-                                                            Visibility="Hidden">
+                                    </Button>
+                                    <Button x:Name="PART_Restore"
+                                            Grid.Column="1"
+                                            BorderThickness="0"
+                                            Command="{x:Static controls:WindowCommands.Restore}"
+                                            Width="34" Height="26"
+                                            MinWidth="34"
+                                            Visibility="Hidden">
                                         <Path Data="{StaticResource RestoreIcon}"
-                                              Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type controls:CommandButton}}, Path=(params:CommandButtons.Mask)}"
+                                              Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
                                               Width="10" Height="10"/>
-                                    </controls:CommandButton>
-                                    <controls:CommandButton x:Name="PART_Close"
-                                                            Grid.Column="2"
-                                                            BorderThickness="0"
-                                                            Command="{x:Static controls:WindowCommands.Close}"
-                                                            Width="34" Height="26">
+                                    </Button>
+                                    <Button x:Name="PART_Close"
+                                            Grid.Column="2"
+                                            BorderThickness="0"
+                                            Command="{x:Static controls:WindowCommands.Close}"
+                                            Width="34" Height="26"
+                                            MinWidth="34">
                                         <Path Data="{StaticResource CloseIcon}"
-                                              Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type controls:CommandButton}}, Path=(params:CommandButtons.Mask)}"
+                                              Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
                                               Width="10" Height="10"/>
-                                    </controls:CommandButton>
+                                    </Button>
                                 </Grid>
                             </Grid>
                             <AdornerDecorator Grid.Row="1"
