--- a/Elysium for .NET 4/Source code/Elysium.Notifications/Documentation/en/Elysium.Notifications.tt
+++ b/Elysium for .NET 4/Source code/Elysium.Notifications/Documentation/en/Elysium.Notifications.tt
@@ -15,14 +15,13 @@
     
     var paths = new List<string>();
     
-    /*paths.Add(@"Animation.en.xml");
+    paths.Add(@"Animation.en.xml");
     paths.Add(@"HorizontalPlacement.en.xml");
+    paths.Add(@"NotificationManager.en.xml");
     paths.Add(@"VerticalPlacement.en.xml");
 
-    paths.Add(@"NotificationManager.en.xml");
-
     paths.Add(@"Exceptions\PushNotificationFailedException.en.xml");
-    paths.Add(@"Exceptions\ServerUnavailableException.en.xml");*/
+    paths.Add(@"Exceptions\ServerUnavailableException.en.xml");
     
     var documentation = new XDocument(new XDeclaration("1.0", "utf-8", "yes"));
     
