--- a/Elysium for .NET 4.5/Source code/Elysium/Themes/Generic.xaml
+++ b/Elysium for .NET 4.5/Source code/Elysium/Themes/Generic.xaml
@@ -2346,7 +2346,7 @@
     <Setter Property="RenderOptions.ClearTypeHint" Value="Enabled" />
     <Setter Property="HasDropShadow" Value="{DynamicResource {x:Static SystemParameters.DropShadowKey}}" />
     <Setter Property="FocusVisualStyle" Value="{x:Null}" />
-    <Setter Property="Focusable" Value="False" />
+    <Setter Property="Focusable" Value="True" />
     <Setter Property="ResizeMode" Value="CanResizeWithGrip" />
     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
     <Setter Property="VerticalContentAlignment" Value="Stretch" />
