--- a/Elysium for .NET 4.5/Source code/SDK/MSI/ProjectTemplates/Visual Studio 2012/CSharp/1049/MetroApplication.tt
+++ b/Elysium for .NET 4.5/Source code/SDK/MSI/ProjectTemplates/Visual Studio 2012/CSharp/1049/MetroApplication.tt
@@ -20,8 +20,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>$safeprojectname$</RootNamespace>
     <AssemblyName>$safeprojectname$</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v$targetframeworkversion$</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -111,6 +110,12 @@
     <AppDesigner Include="Properties\" />
 
   </ItemGroup>
+
+  $if$ ($targetframeworkversion$ > 4.0)
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  $endif$
 
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
